# fahrenheit-celsius-converter

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: publish-container.yml  rust.yml
src/: app.rs  main.rs
src/handlers/: mod.rs  temperature.rs
src/models/: mod.rs  temperature_conversion.rs
