[package]
name = "fahrenheit_celsius_kelvin_converter"
version = "0.2.0"
edition = "2021"
license = "GPL-3"
description = "A simple web temperature converter written in Rust using Actix-Web"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
